fix Chrome: user-list__item align items center

--- a/frontend/src/Components/Chat/Chat.css
+++ b/frontend/src/Components/Chat/Chat.css
@@ -20,8 +20,9 @@ main {
 .user-list__item {
 	display: flex;
 	width: 100%;
-	height: 75px;
+	height: 70px;
 	padding-left: 10px;
+	align-items: center;
 }
 
 .user-list__item__avatar {
